# waterfall

./: .gitignore  Cargo.toml  LICENSE  config.yaml  justfile
core/: Cargo.toml
core/src/: config_reader.rs  crypto.rs  crypto_hash.rs  instruction.rs  lib.rs  runtime.rs  state.rs  system_config.rs
demo/: Cargo.toml
demo/src/: main.rs
waterfall/: Cargo.toml
waterfall/src/: lib.rs
waterfall/src/llm/: ix.rs  mod.rs  runtime.rs
