[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
waterfall = { path = "../waterfall" }

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true 

xsalsa20poly1305.workspace = true
blake3.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true

async-openai.workspace = true
async-trait.workspace = true
reqwest.workspace = true

tracing.workspace = true

tokio.workspace = true
serde_yaml = "0.9.1"