[package]
name = "waterfall"
version = "0.1.0"
edition = "2021"

[dependencies]
waterfall-core = { path = "../core" }

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true 

xsalsa20poly1305.workspace = true
blake3.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true

async-openai.workspace = true
async-trait.workspace = true
reqwest.workspace = true

tracing.workspace = true
indicatif = "0.17"
colored = "2.0"